--- a/CustomerManagement/appsettings.json
+++ b/CustomerManagement/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DatabaseConnection": "Server=MOHAMMAD-AIJAZ;Database=CustomerDB;User ID=sa;Password=password@123;"
+  }
 }
